# how-to-parse

./: README.md
part1/: README.md
part1/src/: event_to_tree.rs
part2/: Cargo.toml  README.md
part2/src/: ast_builder_listener.rs  event_push_parser.rs  event_to_tree.rs  lib.rs  test_common.rs  timestamp_parser.rs  token.rs
part3/: Cargo.toml  README.md
part3/src/: direct_non_recursive.rs  event_parser.rs  event_parser_2.rs  event_push_parser_2.rs  event_push_parser_3.rs  event_push_parser_3_non_recursive.rs  event_to_tree.rs  lexer.rs  lexer_list.rs  lexer_push.rs  lib.rs  recursive_descent.rs
